...
                return null;
              },
              hintText: locals.email,
            ),
            const SizedBox(height: 16),
            Semantics(
              identifier: 'Login-Bottomsheet-Password-Input',
              textField: true,
              child: InputFormField(
              controller: passwordController,
              autofillHints: const [AutofillHints.password],
              keyboardType: TextInputType.visiblePassword,
              onChanged: (_) => setState(() {}),
...
