...
      canPop: !shouldLockScreen,
      child: Scaffold(
        key: _key,
        resizeToAvoidBottomInset: false,
        appBar: FunTopAppBar(
          variant: FunTopAppBarVariant.white,
          key: const ValueKey('EU-Home-AppBar'),
          title: switch (pageIndex) {
            0 => locals.amount,
            1 =>
              (auth.user.tempUser || auth.user.needRegistration)
                  ? locals.welcomeOnly
                  : locals.chooseGroup(auth.user.firstName),
...
